--- a/views/nav_2.html
+++ b/views/nav_2.html
@@ -49,7 +49,7 @@
 
 <!-- <script src="./js/sb-admin-2.min.js"></script> -->
 <script type="text/javascript">
-  var link="http://localhost/nfc_data/call_controller/api.php";
+  var link="./call_controller/api.php";
   load_user();
   function load_user(){
       let txt;
