--- a/views/nfc_p_patient.html
+++ b/views/nfc_p_patient.html
@@ -21,7 +21,7 @@
         <div class="card shadow mb-4">
             <div class="card-header d-sm-flex align-items-center justify-content-between mb-2">
                 <h6 class="m-0 font-weight-bold text-primary">ข้อมูลผู้ป่วย</h6>
-                <a class=" d-sm-inline-block btn btn-sm btn btn-secondary shadow-sm" onclick="open_add()" data-toggle="modal" data-target="#modal_p_staff"><i class="fas fa-plus-square fa-md text-white"></i></a>
+                <a class=" d-sm-inline-block btn btn-sm btn btn-secondary shadow-sm" onclick="open_add()" data-toggle="modal" data-target="#modal_p_patient"><i class="fas fa-plus-square fa-md text-white"></i></a>
             </div>
             <div class="card-body">
                 <div class="table-responsive">
