--- a/views/login.html
+++ b/views/login.html
@@ -96,7 +96,7 @@
     let sta=0;
     if($("#nfc_usr").val()==""){sta++;}
     if($("#nfc_pwd").val()==""){sta++;}
-    console.log(sta);
+    // console.log(sta);
     if(sta!=0){
       $("#frm_login").addClass("was-validated");
       let msg=`
