--- a/views/nfc_p_patient.html
+++ b/views/nfc_p_patient.html
@@ -392,8 +392,8 @@
 	function set_pagination(filter,page){
 		let start_page;
 		let end_page;
-		console.log(filter);
-		console.log(page);
+		// console.log(filter);
+		// console.log(page);
 		$("#pagination").empty();
 		
 
