--- a/views/nfc_p_patient.html
+++ b/views/nfc_p_patient.html
@@ -218,12 +218,12 @@
 		let txt=`<button id="btn_save" onclick="add()" type="button" class="btn btn-success" data-dismiss=""><i class="fas fa-save fa-1x"></i> บันทึก</button>`;
 		$("#mng").html(txt);
 	}
-	function sh_data(p_card_id,p_name,p_lname,p_age,p_blood,p_weight,p_height,p_gender){
+	function sh_data(p_card_id,p_name,p_lname,p_age,p_blood,p_weight,p_height,p_gender,p_id){
 		clear_input();
 		let txt=`
 		
 		<button id="btn_del" onclick="del()" type="button" class="btn btn-danger float-left" data-dismiss=""><i class="fas fa-trash-alt fa-1x"></i> ลบ</button>
-		<a href="?sh_patient_detail=${p_card_id}" class="btn btn-info " style="margin-left:0 !important" data-dismiss=""><i class="fab fa-readme" fa-1x"></i> ยาที่ใช้</a>
+		<a href="?sh_patient_detail=${p_id}" class="btn btn-info " style="margin-left:0 !important" data-dismiss=""><i class="fab fa-readme" fa-1x"></i> ยาที่ใช้</a>
 		<button id="btn_save" onclick="update()" type="button" class="btn btn-success float-right" data-dismiss=""><i class="fas fa-save fa-1x"></i> บันทึก</button>`;
 
 	
@@ -376,7 +376,7 @@
 					        <td>${row}</td>
 					        <td>${item.p_name} ${item.p_lname}</td>
 					        <td>${item.p_blood}</td>
-					        <td><button style="color:#fff" type="button" onclick="sh_data('${item.p_card_id}','${item.p_name}','${item.p_lname}','${item.p_age}','${item.p_blood}','${item.p_weight}','${item.p_height}','${item.p_gender}')" class="btn">
+					        <td><button style="color:#fff" type="button" onclick="sh_data('${item.p_card_id}','${item.p_name}','${item.p_lname}','${item.p_age}','${item.p_blood}','${item.p_weight}','${item.p_height}','${item.p_gender}','${item.p_id}')" class="btn">
 				        		<i  class="fas fa-book-open fa-2x"></i>
 				        	</button>`;
 						
