--- a/views/nfc_p_patient.html
+++ b/views/nfc_p_patient.html
@@ -70,7 +70,8 @@
 					        <div class="input-group-prepend">
 					          <span class="input-group-text" ><i class="fas fa-tags"></i></span>
 					        </div>
-					        <input type="hidden" name="frm_mode" id="frm_mode">
+							<input type="hidden" name="frm_mode" id="frm_mode">
+							<input type="text" name="p_id" id="p_id">
 					        <input type="text" class="form-control" id="p_card_id" name="p_card_id" oninvalid="this.setCustomValidity('รหัสประชาชน')"required oninput="this.setCustomValidity('')" placeholder="รหัสประชาชน">
 					    </div>
 				    </div>
@@ -235,7 +236,7 @@
 		$("#p_height").val(p_height);
 		$("#p_age").val(p_age);
 		$("#modal_p_patient").modal();
-		
+		$("#p_id").val(p_id);
 		$("#p_blood").val(p_blood);
 
 		if(p_gender=="M"){$("#p_gender_m").prop('checked', true);}
